@@ -68,6 +68,9 @@
                    zope.container.interfaces.IObjectRemovedEvent"
               handler=".events.onCategoryRemoved" />
 
+  <subscriber for="Products.PluggableAuthService.interfaces.events.IGroupDeletedEvent"
+              handler=".events.onPloneGroupDeleted" />
+
   <!-- meetingadvice events -->
   <subscriber for=".content.advice.IMeetingAdvice
                    zope.lifecycleevent.IObjectModifiedEvent"
